# steam-details

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  tmp.html
src/: analytics.py  api.py  how_long_to_beat.py  keyforsteam.py  main.py  protondb.py  service.py  service_manager.py  steam.py  steamdb.py  utils.py
src/services/: how_long_to_beat.py  keyforsteam.py  protondb.py  steam.py  steamdb.py
src/static/: add_game.js  script.js  style.css
src/static/css/: analytics.css  index.css  main.css  style.css
src/static/js/: analytics.js  index.js  main.js  script.js
src/static/templates/: index.html
src/steam-details/: analytics.py  main.py  service_manager.py
src/steam-details/services/: how_long_to_beat.py  protondb.py  steam.py  steamdb.py
src/steam-details/static/css/: analytics.css  index.css  main.css
src/steam_details/: __init__.py  __main__.py  analytics.py  api.py  main.py  service.py  service_manager.py  utils.py
src/steam_details/services/: how_long_to_beat.py  keyforsteam.py  protondb.py  steam.py  steamdb.py
src/steam_details/templates/: error.html
src/steam_details/web/: api.py  web.py
src/steam_details/web/static/css/: analytics.css  index.css  main.css
src/steam_details/web/static/js/: analytics.js  main.js
src/steam_details/web/static/js/index/: add_game.js  details_grid.js  index.js  purchase_areas.js
src/steam_details/web/templates/: error.html  index.html  nav_area.html
src/templates/: analytics.html  head_content.html  index.html  nav_area.html
